[gd_scene load_steps=4 format=3 uid="uid://c1puap1p2fyfg"]

[ext_resource type="PackedScene" uid="uid://bfqwnwkj2tn3" path="res://Scene/InputField/clipboard_line_edit.tscn" id="1_mpnxk"]
[ext_resource type="Script" path="res://Scene/InputField/attribute_input_field.gd" id="1_rb1h2"]
[ext_resource type="PackedScene" uid="uid://bx2b4oh6or1r1" path="res://Scene/InputField/clipboard_spin_box.tscn" id="2_0gn7a"]

[node name="AttributeInputField" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_rb1h2")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Label:"
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ClipboardLineEdit" parent="." instance=ExtResource("1_mpnxk")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ClipboardSpinBox" parent="." instance=ExtResource("2_0gn7a")]
unique_name_in_owner = true
visible = false
layout_mode = 2
